# new-lease-on-life

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  batch_isochrones_for_stops.py  candidates.yml  consolidate_isochrones.py  env.example  export_shapefiles.py  extract_postcode_polygons.py  extract_stops_within_union.py  fix_geojson.py  isochrone_viewer.py  known_commutes.yml  mermaid_diagram.md  migrate_geojson_geoparquet.py  postcodes.csv  process_realestate_candidates.py  pydeck_debugger.py  pyproject.toml  stops_by_transit_time.py
.claude/: settings.local.json
.claude/agents/: create-helper-script.md  discover-helper-scripts.md  index-helper-scripts.md
.claude/agents/helper-scripts/: analyse-helper-scripts.md  create-helper-script.md  index-helper-scripts.md
.claude/commands/: analyze-arch.md
.claude/commands/j/: refactor-helper-scripts.md
.claude/hooks/: hogger.py
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  claude.yml  deploy-github-pages.yml
backend/: api.py
diagrams/: architecture.mmd
frontend/: package-lock.json  package.json
frontend/.github/: copilot-instructions.md
frontend/src/: App.tsx
frontend/tests/: README.md  app.spec.ts
scripts/: CLAUDE.md  INDEX.md  TODO.md  batch_isochrones_for_stops.py  consolidate_isochrones.py  convert_rental_sales_to_duckdb.py  discover_rental_sales_data.py  export_shapefiles.py  extract_boundaries_by_state.py  extract_postcode_polygons.py  extract_state_polygons.py  extract_stops_within_union.py  fix_geojson.py  generate_rental_sales_geojson.py  geocode_candidates.py  migrate_geojson_geoparquet.py  process_realestate_candidates.py  process_rental_sales_excel.py  rental_sales_config.json  stops_by_transit_time.py  utils.py
scripts/rental_sales/: extract.py  extract_schema_mapping.yaml
sites/webapp/: Makefile  README.md  geospatial_mappings.js  index.html  layers_config.json  parquet_layers_config.json  scripts.js
sites/webapp/data/: 15.parquet  5.parquet  all_candidates.geojson  all_candidates.parquet  lines_within_union_metro_tram.parquet  ptv_commute_tier_hulls_metro_train.parquet  ptv_commute_tier_hulls_metro_tram.geojson  ptv_commute_tier_hulls_metro_tram.parquet  rental_sales.duckdb  selected_lga_2024_aust_gda2020.geojson  selected_lga_2024_aust_gda2020.parquet  selected_postcodes_with_trams_trains.parquet  selected_sa2_2021_aust_gda2020.geojson  selected_sa2_2021_aust_gda2020.parquet  selected_sal_2021_aust_gda2020.geojson  selected_sal_2021_aust_gda2020.parquet  stops_with_commute_times_metro_train.geojson  stops_with_commute_times_metro_train.parquet  stops_with_commute_times_metro_tram.parquet
sites/webapp/modules/: README.md  database.js  main.js  selection.js  utils.js
sites/webapp/sql/: lga_template.sql  postcode_template.sql  sa2_template.sql
specs/: rental-sales-data-catalog.md
src/new_lease_on_life/: __main__.py  cache.py  rea.py  utils.py
src/new_lease_on_life/maps/: distance.py  geoshapes.py
static/: README.md  index.html  layers_config.json  scripts.js
static/data/: 5.geojson  all_candidates.geojson  all_candidates.parquet  ptv_commute_tier_hulls.geojson  ptv_commute_tier_hulls_metro_train.geojson  ptv_commute_tier_hulls_metro_tram.geojson  selected_postcodes_with_trams_trains.geojson  stops_with_commute_times_metro_train.geojson  stops_with_commute_times_metro_tram.geojson
tests/webapp/: conftest.py  test_basic.py  test_chart_series_names.py  test_duckdb_loading_indicator.py  test_hyphen_delimited_codes.py  test_selection_panel.py
webapp/: __main__.py  app.py  config.py  static_layers_config.json  static_layers_config.yaml  static_layers_lga.json
webapp/layers/: ptv_lines.py
webapp/utils/: __init__.py  calculations.py  colours.py
